# rust_todo_app

./: Cargo.toml  README.md
migrations/: 20241221194136_create_todos_table.sql  20241221194224_create_users_table.sql
src/: main.rs
src/config/: database.rs
src/handlers/: auth.rs  todo.rs
src/models/: todo.rs  user.rs
src/routes/: auth_routes.rs  mod.rs  todo_routes.rs
src/schema/: mod.rs  todo_schema.rs  user_schema.rs
src/utils/: hashing.rs  jwt.rs  mod.rs
