[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
derive_more = "0.99"
dotenvy = "0.15"
env_logger = "0.9"
log = "0.4"
mysql = "20.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.0"
bcrypt = "0.12"
chrono = "0.4"

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["mysql"] }
